희제내용넣는중

--- a/data/style/about.css
+++ b/data/style/about.css
@@ -124,7 +124,7 @@
   .letter-front,
   .letter-end {
     pointer-events: none;
-    height: 100%;
+    height: -webkit-fill-available;
   }
   .letter-front__Top,
   .letter-front__Middle,
