--- a/data/style/individual.css
+++ b/data/style/individual.css
@@ -52,11 +52,13 @@ body{
 	  height:  80vh;
 	  width: 60vh;
 	  align-items: center;
+	  background-color: rgba(255, 255, 255, 0);
   }
   
   .individual_img img{
+	background-color: rgba(255, 255, 255, 0);
 	position: absolute; top: 0; left: 0; transform: translate(50, 50); 
-	width: 100%; height: 100%; object-fit: cover; margin: auto;
+	width: 100%; height: 100%; object-fit: contain; margin: auto;
 
   }
   .square_poster{
@@ -68,7 +70,7 @@ body{
 
 	.square_poster img{
 	position: absolute; top: 0; left: 0; transform: translate(50, 50); 
-	width: 100%; height: 100%; object-fit: cover; margin: auto;
+	width: 100%; height: 100%;object-fit: contain;  margin: auto;
 
 	}
   .section-title{
@@ -371,10 +373,11 @@ body{
 		width: 60vw;
 		margin: 4vh 0;
 		margin-left: 15vw;
+		background-color: rgba(255, 255, 255, 0);
 	}
 	.individual_img img{
 	  position: absolute; top: 0; left: 0; transform: translate(50, 50); 
-	  width: 100%; height: 100%; object-fit: cover; margin: auto;
+	  width: 100%; height: 100%; object-fit: contain; margin: auto;
 	}
 
 	.square_poster{
